--- a/finalPro/src/main/webapp/aboutt.html
+++ b/finalPro/src/main/webapp/aboutt.html
@@ -17,6 +17,7 @@
 	+dth, initial-scale=1, maximum-scale=1">
 	
 	<!-- dd-->
+	<!-- 이학제 -->
 	
 	<!-- CSS
   ================================================== -->
