--- a/finalPro/src/main/webapp/aboutt.html
+++ b/finalPro/src/main/webapp/aboutt.html
@@ -19,6 +19,8 @@
 	<!-- dd-->
 	<!-- 이학제 -->
 	<!-- 이학제 -->
+	<!-- 이학제 -->
+	<!-- 이학제 -->
 	<!-- CSS
   ================================================== -->
 	<link rel="stylesheet" href="css/base.css"/>
