--- a/finalPro/src/main/webapp/aboutt.html
+++ b/finalPro/src/main/webapp/aboutt.html
@@ -15,8 +15,8 @@
   ================================================== -->
 	<meta name="viewport" content="width=device-wi
 	+dth, initial-scale=1, maximum-scale=1">
-	
-	<!-- dd-->
+		<!--<!-- c천다예-->
+	<!--<!-- c천다예-->
 	<!-- 이학제 -->
 	<!-- 이학제 -->
 	<!-- 이학제 -->
